--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up"
         data-aos-delay="100">
         <h2>Reza Oktarian</h2>
-        <p><span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+        <p><span class="typed" data-typed-items="Fresh Graduate, Financial Analyst, Economist, Tax Accountant"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
