--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
             <div class="row justify-content-between gy-4">
               <div class="col-lg-5">
-                <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+                <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="">
               </div>
               <div class="col-lg-7 about-info">
                 <p><strong>Nama: </strong> <span>Reza Oktarian</span></p>
