--- a/index.html
+++ b/index.html
@@ -656,8 +656,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>Komp. Taman Indralaya Indah / Adibilah, Kel. Indralaya Indah, Kec. Indralaya, 
-                    Kab. Ogan Ilir, Sumatera Selatan, 30862</p>
+                  <p>Kec. Indralaya, Kab. Ogan Ilir, Sumatera Selatan, 30862</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
